<resources>
    <string name="app_name">Done!</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="action_add_new">Add</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to New Done Activity -->
    <string name="task_edit_text_empty_error">Please enter a task!</string>
    <string name="new_task_saved_toast_message">Task saved.</string>
    <string name="edited_task_saved_toast_message">Changes saved.</string>
    <string name="task_sent_toast_message">sent.</string>
    <string name="task_deleted_toast_message">deleted.</string>
    <string name="new_done_hint">What\'d you get done today?</string>
    <string name="team_label">Team</string>
    <string name="date_label">Date</string>
    <string name="notification_text_non_one">tasks logged so far today. Keep it up!</string>
    <string name="notification_text_one">task logged so far today. Let\'s get more done!</string>
    <string name="notification_text_zero">No tasks completed today. Get cracking!</string>

    <string name="offline_toast_message">Offline! Will try again when connection available.</string>

    <string name="empty"></string>
    <string name="LOGIN_EXCHANGE_ACCESS_TOKEN">Getting authorisation…</string>
    <string name="LOGIN_ACCESS_TOKEN_ACQUIRED">Authorised.</string>
    <string name="LOGIN_FETCH_USERNAME">Fetching user details…</string>
    <string name="LOGIN_USERNAME_ACQUIRED">Details downloaded.</string>
    <string name="LOGIN_FETCH_TEAMS">Fetching teams…</string>
    <string name="LOGIN_TEAMS_ACQUIRED">Teams downloaded.</string>
    <string name="LOGIN_FETCH_TASKS">Fetching tasks…</string>
    <string name="LOGIN_ERROR_OR_CANCELLED">Login cancelled, or error.</string>
    <string name="LOGIN_SUCCESSFUL">Login Successful.</string>
    <string name="ACCESS_TOKEN_EXPIRED">Access Token expired. Refresh before continuing.</string>


    <!-- Strings related to Splash/Login & About screens -->
    <string name="_for">for</string>
    <string name="_by">by </string>
    <string name="with">with</string>
    <string name="sign_in">Sign In</string>
    <string name="idonethis_logo">I Done This</string>
    <string name="developer_string">&lt;a href=\'https://c306.net/?utm_source=AboutDialog&amp;utm_medium=DoneForAndriodApp&amp;utm_campaign=doneForAndroid\'&gt;Aditya Bhaskar&lt;/a&gt;</string>


    <!-- Strings related to Contextual Action Bar -->
    <string name="edit_task">Edit</string>
    <string name="delete_task">Delete</string>

    <!-- Strings related to Settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_default_team">Default Team</string>
    <string name="pref_summary_default_team">Default team to posts tasks to.</string>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_on_startup">Refresh on startup</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
        <item>10800</item>
        <item>21600</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Strings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_daily_notifications">Reminder notifications</string>

    <string name="pref_notification_days_title">Days</string>
    <string-array name="pref_notification_days_titles">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="pref_notification_days_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <string name="everyday">Daily</string>
    <string name="weekdays">Weekdays, </string>
    <string name="weekends">Weekends, </string>
    <string name="weekdays_only">Weekdays only</string>
    <string name="weekends_only">Weekends only</string>

    <string name="pref_notification_time_title">Time</string>

    <string name="pref_notification_snooze_title">Snooze duration</string>
    <string-array name="pref_notification_snooze_titles">
        <item>1 minute</item>
        <item>5 minute</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hour</item>
        <item>6 hours</item>
    </string-array>

    <string-array name="pref_notification_snooze_values">
        <item>60</item>
        <item>300</item>
        <item>900</item>
        <item>1800</item>
        <item>3600</item>
        <item>7200</item>
        <item>21600</item>
    </string-array>

    <string name="pref_title_ringtone">Notification sound</string>
    <string name="pref_ringtone_silent">Silent</string>

    <!-- END SETTINGS STRINGS -->

    <!-- Strings for Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="all_tasks">All tasks</string>
    <string name="teams_header">Teams</string>
    <string name="tags_header">Tags</string>
    <string name="tags_empty">No tags found</string>
    <string name="team_color_description">Team color</string>

    <!-- User visible strings from code -->
    <string name="delete_task_message">Are you sure you want to delete this task?</string>
    <string name="delete_tasks_message">Are you sure you want to delete these tasks?</string>
    <string name="tasks_string">tasks</string>
    <string name="task_string">Task</string>
    <string name="delete_string">Delete</string>
    <string name="cancel_string">Cancel</string>
    <string name="task_owner_mismatch_toast">Only task owner can edit or delete task.</string>
    <string name="logout_dialog_title">Are you sure?</string>
    <string name="logout_dialog_message">All local data will be deleted.</string>
    <string name="logout_dialog_logout_button">Logout</string>
    <string name="logout_dialog_cancel_button">Cancel</string>
    <string name="edit_discard_changes_dialog_title">Discard changes?</string>
    <string name="edit_discard_changes_dialog_discard_button">Discard</string>
    <string name="edit_discard_changes_dialog_cancel_button">Cancel</string>

    <!-- User visibile strings in code from Task Details -->
    <string name="share_task">Share</string>
    <string name="_yesterday">Yesterday</string>
    <string name="_today">Today</string>
    <string name="share_string_completed">Completed</string>
    <string name="title_share_with">Share task</string>

    <string name="PREF_TITLE_DEFAULT_VIEW">Primary View</string>
    <string name="PREF_SUMMARY_DEFAULT_VIEW">First view to open the app in</string>

    <string name="PREF_TITLE_COUNT_TO_FETCH">Number of tasks to sync (max 250*)</string>
    <string name="PREF_SUMMARY_COUNT_TO_FETCH">Higher the number, more the data consumption</string>
    <integer name="DEFAULT_COUNT_TO_FETCH">100</integer>

    <string name="PREF_TITLE_DAYS_TO_FETCH">Number of days to sync, capped at NUMCOUNT tasks</string>

    <string-array name="pref_days_to_fetch_titles">
        <item>1 week</item>
        <item>2 weeks</item>
        <item>3 weeks</item>
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>
        <item>6 months</item>
        <item>As many as possible</item>
    </string-array>

    <string-array name="pref_days_to_fetch_values">
        <item>7</item>
        <item>14</item>
        <item>21</item>
        <item>30</item>
        <item>61</item>
        <item>92</item>
        <item>183</item>
        <item>999</item>
    </string-array>
    <integer name="DEFAULT_DAYS_TO_FETCH">30</integer>

    <string name="POST_NOTICE_TITLE">Important Notice!</string>
    <string name="POST_NOTICE_TEXT">This app will soon <b>stop working for iDoneThis</b> users.\n\nPlease see the post below with full details.</string>
    <string name="BUTTON_TEXT_SEE_POST">View Full Post</string>
</resources>
 