<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.c306.done.SplashScreenActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/_32_double"
        android:contentDescription="@string/app_name"
        android:paddingBottom="120dp"
        android:src="@drawable/ic_splash_icon_120"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_32_double"
        android:layout_marginEnd="@dimen/_32_double"
        android:layout_marginStart="@dimen/_32_double"
        android:background="@drawable/splash_login_rounded_rectangle"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8dp_half"
            android:background="@color/accent"
            android:minWidth="160dp"
            android:onClick="openLoginActivity"
            android:text="@string/sign_in"
            android:textAppearance="?android:textAppearanceButton"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/with"
            android:textAlignment="center"
            android:textSize="16sp"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_32_double"
            android:contentDescription="@string/idonethis_logo"
            android:src="@drawable/idt_logo"/>
    </LinearLayout>

</RelativeLayout>
