<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NewDoneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.AppCompat">

            <EditText
                android:id="@+id/done_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:hint="@string/new_done_hint"
                android:inputType="textCapSentences|textMultiLine"
                android:textCursorDrawable="@null"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:paddingStart="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/team_picker"
                android:text="@string/team_label"
                android:textAppearance="@style/TextAppearance.AppCompat"
                />

            <Spinner
                android:id="@+id/team_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:paddingStart="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/done_date_text"
                android:text="@string/date_label"
                android:textAppearance="@style/TextAppearance.AppCompat"
                />

            <EditText
                android:id="@+id/done_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date"
                android:onClick="openDatePicker"/>

        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_marginBottom="@dimen/activity_vertical_margin"-->
        <!--android:orientation="vertical"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:labelFor="@+id/date_picker"-->
        <!--android:text="@string/date_label"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--/>-->
        <!--<DatePicker-->
        <!--android:layout_width="wrap_content"-->
        <!--android:id="@+id/date_picker"-->
        <!--android:layout_height="wrap_content"/>-->
        <!--</LinearLayout>-->

    </LinearLayout>
</RelativeLayout>
